# egadsliteCuda

./: CMakeLists.txt  README.md
include/: LINUX64_cuda
lite/: CMakeLists.txt  Makefile  Makefile.cuda  MakefileNR  evalTest.c  evalTest.make  evalTestNR.make  liteAttrs.c  liteDevice.h  liteGeom.c  liteImport.c  liteTest.c  liteTest.make  liteTestCuda.c  liteTestCuda.make  liteTopo.c  liteUVmap.c
src/: egadsTess.c  egadsTris.c
util/: evaluateNR.c
util/uvmap/: uvmap_message.c  uvmap_message.h
